external-crates/move/crates/move-compiler/tests/move_2024/expansion/constants_dont_shadow_leading_access_struct.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/expansion/constants_dont_shadow_leading_access_struct.move:15:13
   │
 3 │     public struct S() has copy, drop;
   │                   - But 'S' is an struct
   ·
15 │             S::foo(); // resolves to struct
   │             ^ Invalid construction. Expected an enum
